Updates to full guidance for v3

--- a/app/views/guidance/full/v3/stages-of-an-appeal.html
+++ b/app/views/guidance/full/v3/stages-of-an-appeal.html
@@ -1,7 +1,7 @@
 {% extends "layouts/layout-guidance.html" %}
 
 {% block pageTitle %}
-  Appeal a householder planning decision 
+  Appeal a planning decision
 {% endblock %}
 
 {% block content %}
@@ -24,16 +24,16 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
-        <h1 class="govuk-heading-xl">Appeal a householder planning decision </h1>
+        <h1 class="govuk-heading-xl">Appeal a planning decision</h1>
         <aside role="complementary">
           <nav class="gem-c-contents-list " aria-label="Pages in this guide" role="navigation" data-module="track-click">
             <h2 class="govuk-body gem-c-contents-list__title">Contents</h2>
             <ol class="gem-c-contents-list__list">
-
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="overview"> Overview</a>
               </li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">When you can appeal
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+                <a class="gem-c-contents-list__link govuk-link" href="when-you-can-appeal"> When you can appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="before-you-appeal"> Before you appeal</a>
@@ -44,8 +44,7 @@
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="submit-an-appeal">Submit an appeal</a>
               </li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="stages-of-an-appeal">The stages of an appeal</a>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">The stages of an appeal
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="your-appeal-decision">Your appeal decision</a>
@@ -54,114 +53,112 @@
                 <a class="gem-c-contents-list__link govuk-link" href="claim-costs-for-your-appeal">Claim costs for your appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="comment-on-householder-appeal">Comment on a householder appeal</a>
+                <a class="gem-c-contents-list__link govuk-link" href="comment-on-planning-appeal">Comment on a planning appeal</a>
               </li>
             </ol>
           </nav>
         </aside>
-        
+
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-l">When you can appeal</h2>
-        
-        <h3 class="govuk-heading-m">Refused planning application </h3>
+        <h2 class="govuk-heading-l" id="part-title">The stages of an appeal</h2>
+
+        <h3 class="govuk-heading-m">1. Submitting your appeal</h3>
         <p class="govuk-body">
-          If your planning application has been refused for reasons you think are incorrect, you can appeal against the refusal. 
+          You prepare and submit your appeal statement and other documents. 
         </p>
         <p class="govuk-body">
-          A reason for refusal is incorrect when it goes against the local planning department's development plan and planning policies. 
-        </p>
-        
-        <h3 class="govuk-heading-m">Granted planning permission with conditions </h3>
-        <p class="govuk-body">
-          If your planning application has been granted with conditions you think are incorrect, you can appeal against the conditions. 
-        </p>
-        <p class="govuk-body">
-          A condition is incorrect when it's: 
-        </p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>unnecessary</li>
-          <li>irrelevant to planning</li>
-          <li>irrelevant to your development</li>
-          <li>unenforceable</li>
-          <li>vague</li>
-          <li>unreasonable</li>
-        </ul>
-        <p class="govuk-body">
-          You can appeal to have the conditions removed from your planning permission, or to change the conditions. 
+          Once you've done this, you get a PDF copy of your appeal. You must send this to the local planning department with a copy of your appeal statement. 
         </p>
 
-        <h3 class="govuk-heading-m">No decision by the local planning department's deadline </h3>
+        <h3 class="govuk-heading-m">2. Checking your appeal</h3>
         <p class="govuk-body">
-          If you have not got a decision on your planning application by your local planning department's deadline, you can appeal against the late decision. 
+          The Planning Inspectorate checks you've submitted everything it needs to progress your appeal. 
         </p>
         <p class="govuk-body">
-          The local planning department's deadline is usually 8 weeks from the day it acknowledged your application. But it can be longer if you agreed a different deadline. 
-        </p>
-
-        <h3 class="govuk-heading-m">Who can appeal </h3>
-        <p class="govuk-body">
-          You can only appeal if you either: 
-        </p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>made the planning application in your name</li>
-          <li>have permission to act on behalf of the person or organisation whose name is on the application</li>
-        </ul>
-
-        <h3 class="govuk-heading-m">Deadline to appeal </h3>
-        
-        <h4 class="govuk-heading-s">Appealing refusal or conditions </h4>
-        <p class="govuk-body">
-          Your deadline is 6 months from the decision date on the letter from your local planning department. 
-        </p>
-        <div class="govuk-inset-text">
-          <p class="govuk-body">
-            Your deadline is sooner if you're appealing a refused householder planning application. 
-          </p>
-          <p class="govuk-body">
-            You made a householder planning application if you applied for: 
-          </p>
-          <ul class="govuk-list govuk-list--bullet">
-            <li>householder planning permission</li>
-            <li>permission to vary or remove a condition on householder planning permission</li>
-            <li>prior approval: larger home extension</li>
-            <li>prior approval: enlargement of a dwellinghouse by construction of additional storeys </li>
-          </ul>
-          <p class="govuk-body">
-            Find out more in the <a href="#" class="govuk-link">appeal a householder planning decision guidance</a>.
-          </p>
-        </div>
-
-        <h4 class="govuk-heading-s">Appealing if you have not got a decision by the local planning department's deadline </h4>
-        <p class="govuk-body">
-          Your deadline is 6 months from the date your decision was due. 
+          They contact you once they have done this. If anything is missing, they ask you to submit it. 
         </p>
 
-        <h4 class="govuk-heading-s">If you have an enforcement notice </h4>
+        <h3 class="govuk-heading-m">3. Evidence from your application</h3>
         <p class="govuk-body">
-          Your deadline may be sooner if you have an enforcement notice for the same development as your planning application - or a very similar one. 
+          The local planning department sends the Planning Inspectorate a copy of the case file for your planning application.
         </p>
         <p class="govuk-body">
-          If you got the enforcement notice before your application was refused, your deadline is 28 days from the decision date on the letter from your local planning department.  
+          You get a copy of this for your information.
         </p>
-        <div class="govuk-inset-text">
-          <p class="govuk-body">
-            If you got the enforcement notice more than 2 years ago, your deadline is not affected.
-          </p>
-        </div>
+
+        <h3 class="govuk-heading-m">4. Statements from other parties</h3>
+
         <p class="govuk-body">
-          If you got the enforcement notice after your application was refused, your deadline is whichever is sooner from the following: 
+          The local planning department can respond to your appeal with a written statement. Other interested parties can also submit statements about your appeal. For example, your neighbours.
         </p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>28 days from the date you received the enforcement notice </li>
-          <li>6 months from the decision date on the letter from your local planning department </li>
-        </ul>
+        <p class="govuk-body">
+          You get copies of any statements for your information.
+        </p>
+
+        <h3 class="govuk-heading-m">5. Responding to the evidence</h3>
+        <p class="govuk-body">
+          This stage depends on how the Planning Inspectorate is deciding your appeal.
+        </p>
+        <p class="govuk-body">
+          'Evidence' is anything that's been submitted by you, your local planning department, or another interested party. 
+        </p>
+        <p class="govuk-body">
+          Find out <a href="#" class="govuk-link">how the Planning Inspectorate can decide your appeal</a>.
+        </p>
+
+        <h4 class="govuk-heading-s">Written representations appeals</h4>
+        <p class="govuk-body">
+          You can respond to any statements submitted by other parties. You do this in writing. This is called your 'final comments'. 
+        </p>
+        <p class="govuk-body">
+          Your local planning department can also submit final comments.
+        </p>
+
+        <h4 class="govuk-heading-s">Hearing appeals</h4>
+        <p class="govuk-body">
+          The Planning Inspectorate arranges the hearing. They agree a date and a venue with you and your local planning department.
+        </p>
+        <p class="govuk-body">
+          At the hearing, you and the local planning department answer questions about your appeal and its evidence. If other interested parties have asked to be there, they may be asked questions too.
+        </p>
+
+        <h4 class="govuk-heading-s">Public inquiry appeals</h4>
+        <p class="govuk-body">
+          The Planning Inspectorate arranges the inquiry. They agree a date and a venue with you and your local planning department.
+        </p>
+        <p class="govuk-body">
+          You and your legal representative must share your arguments with the Planning Inspectorate in advance.
+        </p>
+        <p class="govuk-body">
+          At the inquiry, your and your local planning department's legal representatives cross-examine the evidence. They question you, the local planning department, and expert witnesses. 
+        </p>
+
+        <h3 class="govuk-heading-m">6. Site visit</h3>
+        <p class="govuk-body">
+          The Planning Inspectorate visits your appeal site to see how your development might impact the surrounding area.
+        </p>
+        <p class="govuk-body">
+          If they can, they do this without entering your site. If they need you to give them access, they arrange this with you beforehand.
+        </p>
+        <p class="govuk-body">
+          Sometimes, they decide the appeal does not need a site visit.
+        </p>
+
+        <h3 class="govuk-heading-m">7. Decision</h3>
+        <p class="govuk-body">
+          The Planning Inspectorate uses the evidence from you, the local planning department and other parties to make a decision.
+        </p>
+        <p class="govuk-body">
+          <a href="#" class="govuk-link">Check how long planning appeal decisions are taking</a>
+        </p>
 
         <!-- Navigation-->
         <nav class="gem-c-pagination govuk-!-margin-top-9" role="navigation" aria-label="Pagination">
           <ul class="gem-c-pagination__list" data-module="track-click">
+
             <li class="gem-c-pagination__item gem-c-pagination__item--previous">
-              <a href="overview" class="gem-c-pagination__link" rel="prev">
+              <a href="submit-an-appeal" class="gem-c-pagination__link" rel="prev">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
@@ -171,11 +168,11 @@
                   </span>
                 </span>
                 <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                <span class="gem-c-pagination__link-label">Overview</span>
+                <span class="gem-c-pagination__link-label">Submit an appeal</span>
               </a>
             </li>
             <li class="gem-c-pagination__item gem-c-pagination__item--next">
-              <a href="before-you-appeal" class="gem-c-pagination__link" rel="next">
+              <a href="your-appeal-decision" class="gem-c-pagination__link" rel="next">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
@@ -185,9 +182,10 @@
                   </span>
                 </span>
                 <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                <span class="gem-c-pagination__link-label">Before you appeal</span>
+                <span class="gem-c-pagination__link-label">Your appeal decision</span>
               </a>
             </li>
+
           </ul>
         </nav>
 
@@ -198,7 +196,6 @@
         </div>
 
       </div>
-
     </div>
 
     <div class="govuk-grid-row">
