--- a/app/views/index.html
+++ b/app/views/index.html
@@ -58,11 +58,11 @@ service-start{% extends "layout.html" %}
               <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
 
-                  <!-- public guidance v1 -->
+                  <!-- public guidance v2 -->
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
-                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
-                      text: "Ready for UR"
+                      classes: "govuk-tag--grey govuk-!-margin-bottom-3",
+                      text: "Archived"
                     }) }}
 
                     <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
@@ -103,8 +103,8 @@ service-start{% extends "layout.html" %}
                   <!-- public guidance v1 -->
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
-                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
-                      text: "Ready for UR"
+                      classes: "govuk-tag--grey govuk-!-margin-bottom-3",
+                      text: "Archived"
                     }) }}
 
                     <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
