--- a/app/views/guidance/full/v3/comment-on-planning-appeal.html
+++ b/app/views/guidance/full/v3/comment-on-planning-appeal.html
@@ -1,7 +1,7 @@
 {% extends "layouts/layout-guidance.html" %}
 
 {% block pageTitle %}
-  Appeal a householder planning decision 
+  Appeal a planning decision
 {% endblock %}
 
 {% block content %}
@@ -24,16 +24,16 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
-        <h1 class="govuk-heading-xl">Appeal a householder planning decision </h1>
+        <h1 class="govuk-heading-xl">Appeal a planning decision</h1>
         <aside role="complementary">
           <nav class="gem-c-contents-list " aria-label="Pages in this guide" role="navigation" data-module="track-click">
             <h2 class="govuk-body gem-c-contents-list__title">Contents</h2>
             <ol class="gem-c-contents-list__list">
-
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="overview"> Overview</a>
               </li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">When you can appeal
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+                <a class="gem-c-contents-list__link govuk-link" href="when-you-can-appeal"> When you can appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="before-you-appeal"> Before you appeal</a>
@@ -53,115 +53,95 @@
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="claim-costs-for-your-appeal">Claim costs for your appeal</a>
               </li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="comment-on-householder-appeal">Comment on a householder appeal</a>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">Comment on a planning appeal
               </li>
             </ol>
           </nav>
         </aside>
-        
+
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-l">When you can appeal</h2>
-        
-        <h3 class="govuk-heading-m">Refused planning application </h3>
+        <h2 class="govuk-heading-l" id="part-title">
+          Comment on a planning appeal
+        </h2>
         <p class="govuk-body">
-          If your planning application has been refused for reasons you think are incorrect, you can appeal against the refusal. 
+          Anyone can comment on a planning appeal.
         </p>
         <p class="govuk-body">
-          A reason for refusal is incorrect when it goes against the local planning department's development plan and planning policies. 
+          The Planning Inspectorate uses your comments to help it make a decision.
         </p>
-        
-        <h3 class="govuk-heading-m">Granted planning permission with conditions </h3>
+
+        <h3 class="govuk-heading-m">
+          How to comment on an appeal
+        </h3>
         <p class="govuk-body">
-          If your planning application has been granted with conditions you think are incorrect, you can appeal against the conditions. 
+          To submit your comments, <a href="#" class="govuk-link">find the appeal online</a>.
         </p>
         <p class="govuk-body">
-          A condition is incorrect when it's: 
+          If you cannot use the online service, you can submit your comments to the Planning Inspectorate's customer support team:
+        </p>
+        <p class="govuk-body">
+          Email: <a href="mailto:enquiries@planninginspectorate.gov.uk">enquiries@planninginspectorate.gov.uk</a><br>
+          We aim to respond within 5 working days.
+        </p>
+        <p class="govuk-body">
+          Telephone: 0303 444 5000<br>
+          Monday to Friday, 9am to 5pm (except public holidays)
+        </p>
+        <p class="govuk-body">
+          <a class="govuk-link" href="https://www.gov.uk/call-charges">Find out about call charges</a>
+        </p>
+
+        <h3 class="govuk-heading-m">
+          Deadline to submit comments
+        </h3>
+        <p class="govuk-body">
+          Your deadline is either:
         </p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>unnecessary</li>
-          <li>irrelevant to planning</li>
-          <li>irrelevant to your development</li>
-          <li>unenforceable</li>
-          <li>vague</li>
-          <li>unreasonable</li>
+          <li>5 weeks after the start date of the appeal</li>
+          <li>6 weeks after the date on the local planning department's enforcement notice</li>
         </ul>
-        <p class="govuk-body">
-          You can appeal to have the conditions removed from your planning permission, or to change the conditions. 
+
+        <h3 class="govuk-heading-m">
+          If you commented on the planning application
+        </h3>
+        <p>
+          The local planning department will forward your original comments to the Planning Inspectorate. You do not need to resubmit your comments.
+        </p>
+        <h4 class="govuk-heading-s">
+          Withdraw your original comments
+        </h4>
+        <p>
+          If you want to withdraw your original comments, email <a href="mailto:enquiries@planninginspectorate.gov.uk">enquiries@planninginspectorate.gov.uk</a>
+        </p>
+        <p>
+          If you withdraw your comments, the Planning Inspectorate will not use your comments to help it make a decision.
         </p>
 
-        <h3 class="govuk-heading-m">No decision by the local planning department's deadline </h3>
-        <p class="govuk-body">
-          If you have not got a decision on your planning application by your local planning department's deadline, you can appeal against the late decision. 
+        <h3 class="govuk-heading-m">
+          Taking part in a planning appeal
+        </h3>
+        <p>
+          Commenting is one way you can take part in a planning appeal.
         </p>
         <p class="govuk-body">
-          The local planning department's deadline is usually 8 weeks from the day it acknowledged your application. But it can be longer if you agreed a different deadline. 
-        </p>
-
-        <h3 class="govuk-heading-m">Who can appeal </h3>
-        <p class="govuk-body">
-          You can only appeal if you either: 
+          You can also:
         </p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>made the planning application in your name</li>
-          <li>have permission to act on behalf of the person or organisation whose name is on the application</li>
+          <li>ask the Planning Inspectorate to view the appeal site from your property</li>
+          <li>ask to attend the hearing, if there is one</li>
+          <li>ask to attend the inquiry, if there is one</li>
         </ul>
-
-        <h3 class="govuk-heading-m">Deadline to appeal </h3>
-        
-        <h4 class="govuk-heading-s">Appealing refusal or conditions </h4>
-        <p class="govuk-body">
-          Your deadline is 6 months from the decision date on the letter from your local planning department. 
+        <p>
+          Read the detailed guidance about <a href="#" class="govuk-link">taking part in an appeal</a>.
         </p>
-        <div class="govuk-inset-text">
-          <p class="govuk-body">
-            Your deadline is sooner if you're appealing a refused householder planning application. 
-          </p>
-          <p class="govuk-body">
-            You made a householder planning application if you applied for: 
-          </p>
-          <ul class="govuk-list govuk-list--bullet">
-            <li>householder planning permission</li>
-            <li>permission to vary or remove a condition on householder planning permission</li>
-            <li>prior approval: larger home extension</li>
-            <li>prior approval: enlargement of a dwellinghouse by construction of additional storeys </li>
-          </ul>
-          <p class="govuk-body">
-            Find out more in the <a href="#" class="govuk-link">appeal a householder planning decision guidance</a>.
-          </p>
-        </div>
-
-        <h4 class="govuk-heading-s">Appealing if you have not got a decision by the local planning department's deadline </h4>
-        <p class="govuk-body">
-          Your deadline is 6 months from the date your decision was due. 
-        </p>
-
-        <h4 class="govuk-heading-s">If you have an enforcement notice </h4>
-        <p class="govuk-body">
-          Your deadline may be sooner if you have an enforcement notice for the same development as your planning application - or a very similar one. 
-        </p>
-        <p class="govuk-body">
-          If you got the enforcement notice before your application was refused, your deadline is 28 days from the decision date on the letter from your local planning department.  
-        </p>
-        <div class="govuk-inset-text">
-          <p class="govuk-body">
-            If you got the enforcement notice more than 2 years ago, your deadline is not affected.
-          </p>
-        </div>
-        <p class="govuk-body">
-          If you got the enforcement notice after your application was refused, your deadline is whichever is sooner from the following: 
-        </p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>28 days from the date you received the enforcement notice </li>
-          <li>6 months from the decision date on the letter from your local planning department </li>
-        </ul>
 
         <!-- Navigation-->
         <nav class="gem-c-pagination govuk-!-margin-top-9" role="navigation" aria-label="Pagination">
           <ul class="gem-c-pagination__list" data-module="track-click">
             <li class="gem-c-pagination__item gem-c-pagination__item--previous">
-              <a href="overview" class="gem-c-pagination__link" rel="prev">
+              <a href="claim-costs-for-your-appeal" class="gem-c-pagination__link" rel="prev">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
@@ -170,22 +150,8 @@
                     Previous
                   </span>
                 </span>
-                <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                <span class="gem-c-pagination__link-label">Overview</span>
-              </a>
-            </li>
-            <li class="gem-c-pagination__item gem-c-pagination__item--next">
-              <a href="before-you-appeal" class="gem-c-pagination__link" rel="next">
-                <span class="gem-c-pagination__link-title">
-                  <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
-                    <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
-                  </svg>
-                  <span class="gem-c-pagination__link-text">
-                    Next
-                  </span>
-                </span>
-                <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                <span class="gem-c-pagination__link-label">Before you appeal</span>
+                  <span class="gem-c-pagination__link-divider visually-hidden">:</span>
+                  <span class="gem-c-pagination__link-label">Claim costs for your appeal</span>
               </a>
             </li>
           </ul>
@@ -198,7 +164,6 @@
         </div>
 
       </div>
-
     </div>
 
     <div class="govuk-grid-row">
