--- a/app/views/guidance/full/v3/when-you-can-appeal.html
+++ b/app/views/guidance/full/v3/when-you-can-appeal.html
@@ -1,7 +1,7 @@
 {% extends "layouts/layout-guidance.html" %}
 
 {% block pageTitle %}
-  Appeal a householder planning decision 
+  Appeal a planning decision
 {% endblock %}
 
 {% block content %}
@@ -24,7 +24,7 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
-        <h1 class="govuk-heading-xl">Appeal a householder planning decision </h1>
+        <h1 class="govuk-heading-xl">Appeal a planning decision</h1>
         <aside role="complementary">
           <nav class="gem-c-contents-list " aria-label="Pages in this guide" role="navigation" data-module="track-click">
             <h2 class="govuk-body gem-c-contents-list__title">Contents</h2>
@@ -42,7 +42,7 @@
                 <a class="gem-c-contents-list__link govuk-link" href="your-appeal-statement">Your appeal statement</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="submit-an-appeal">Submit an appeal</a>
+                <a class="gem-c-contents-list__link govuk-link" href="submit-an-appeal"> Submit an appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="stages-of-an-appeal">The stages of an appeal</a>
@@ -54,30 +54,30 @@
                 <a class="gem-c-contents-list__link govuk-link" href="claim-costs-for-your-appeal">Claim costs for your appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="comment-on-householder-appeal">Comment on a householder appeal</a>
+                <a class="gem-c-contents-list__link govuk-link" href="comment-on-planning-appeal">Comment on a planning appeal</a>
               </li>
             </ol>
           </nav>
         </aside>
-        
+
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-l">When you can appeal</h2>
-        
-        <h3 class="govuk-heading-m">Refused planning application </h3>
+        <h2 class="govuk-heading-l" id="part-title">When you can appeal</h2>
+
+        <h3 class="govuk-heading-m pins-guidance-h3">Refused planning application</h3>
         <p class="govuk-body">
-          If your planning application has been refused for reasons you think are incorrect, you can appeal against the refusal. 
+          If your planning application has been refused for reasons you think are incorrect, you can appeal against the refusal.
         </p>
         <p class="govuk-body">
-          A reason for refusal is incorrect when it goes against the local planning department's development plan and planning policies. 
+          A reason for refusal is incorrect when it goes against the local planning department's development plan and planning policies.
         </p>
-        
-        <h3 class="govuk-heading-m">Granted planning permission with conditions </h3>
+
+        <h3 class="govuk-heading-m pins-guidance-h3">Granted planning permission with conditions</h3>
         <p class="govuk-body">
-          If your planning application has been granted with conditions you think are incorrect, you can appeal against the conditions. 
+          If your planning application has been granted with conditions you think are incorrect, you can appeal against the conditions.
         </p>
         <p class="govuk-body">
-          A condition is incorrect when it's: 
+          A condition is incorrect when it's:
         </p>
         <ul class="govuk-list govuk-list--bullet">
           <li>unnecessary</li>
@@ -88,73 +88,72 @@
           <li>unreasonable</li>
         </ul>
         <p class="govuk-body">
-          You can appeal to have the conditions removed from your planning permission, or to change the conditions. 
+          You can appeal to have the conditions removed from your planning permission, or to change the conditions.
         </p>
 
-        <h3 class="govuk-heading-m">No decision by the local planning department's deadline </h3>
+        <h3 class="govuk-heading-m pins-guidance-h3">No decision by the local planning department's deadline</h3>
         <p class="govuk-body">
-          If you have not got a decision on your planning application by your local planning department's deadline, you can appeal against the late decision. 
+          If you have not got a decision on your planning application by your local planning department's deadline, you can appeal against the late decision.
         </p>
         <p class="govuk-body">
-          The local planning department's deadline is usually 8 weeks from the day it acknowledged your application. But it can be longer if you agreed a different deadline. 
+          The local planning department's deadline is usually 8 weeks from the day it acknowledged your application. But it can be longer if you agreed a different deadline.
         </p>
 
-        <h3 class="govuk-heading-m">Who can appeal </h3>
+        <h2 class="govuk-heading-l pins-guidance-h2">Who can appeal</h2>
         <p class="govuk-body">
-          You can only appeal if you either: 
+          You can only appeal if you either:
         </p>
         <ul class="govuk-list govuk-list--bullet">
           <li>made the planning application in your name</li>
           <li>have permission to act on behalf of the person or organisation whose name is on the application</li>
         </ul>
 
-        <h3 class="govuk-heading-m">Deadline to appeal </h3>
-        
-        <h4 class="govuk-heading-s">Appealing refusal or conditions </h4>
+        <h2 class="govuk-heading-l pins-guidance-h2">Your deadline to appeal</h2>
+
+        <h3 class="govuk-heading-m pins-guidance-h3">Appealing refusal or conditions</h3>
         <p class="govuk-body">
-          Your deadline is 6 months from the decision date on the letter from your local planning department. 
+          Your deadline is 6 months from the decision date on the letter from your local planning department.
         </p>
+
         <div class="govuk-inset-text">
           <p class="govuk-body">
-            Your deadline is sooner if you're appealing a refused householder planning application. 
+            Your deadline is sooner if you're appealing a refused householder planning application.
           </p>
           <p class="govuk-body">
-            You made a householder planning application if you applied for: 
+            You made a householder planning application if you applied for:
           </p>
           <ul class="govuk-list govuk-list--bullet">
             <li>householder planning permission</li>
             <li>permission to vary or remove a condition on householder planning permission</li>
             <li>prior approval: larger home extension</li>
-            <li>prior approval: enlargement of a dwellinghouse by construction of additional storeys </li>
+            <li>prior approval: enlargement of a dwellinghouse by construction of additional storeys</li>
           </ul>
           <p class="govuk-body">
             Find out more in the <a href="#" class="govuk-link">appeal a householder planning decision guidance</a>.
           </p>
         </div>
 
-        <h4 class="govuk-heading-s">Appealing if you have not got a decision by the local planning department's deadline </h4>
+        <h3 class="govuk-heading-m pins-guidance-h3">Appealing if you have not got a decision by the local planning department's deadline</h3>
         <p class="govuk-body">
-          Your deadline is 6 months from the date your decision was due. 
+          Your deadline is 6 months from the date your decision was due.
         </p>
 
-        <h4 class="govuk-heading-s">If you have an enforcement notice </h4>
+        <h3 class="govuk-heading-m pins-guidance-h3">If you have an enforcement notice</h3>
         <p class="govuk-body">
-          Your deadline may be sooner if you have an enforcement notice for the same development as your planning application - or a very similar one. 
+          Your deadline may be sooner if you have an enforcement notice for the same development as your planning application - or a very similar one.
         </p>
         <p class="govuk-body">
-          If you got the enforcement notice before your application was refused, your deadline is 28 days from the decision date on the letter from your local planning department.  
+          If you got the enforcement notice before your application was refused, your deadline is 28 days from the decision date on the letter from your local planning department.
         </p>
-        <div class="govuk-inset-text">
-          <p class="govuk-body">
-            If you got the enforcement notice more than 2 years ago, your deadline is not affected.
-          </p>
-        </div>
+        {{ govukInsetText({
+          text: "If you got the enforcement notice more than 2 years ago, your deadline is not affected."
+        }) }}
         <p class="govuk-body">
-          If you got the enforcement notice after your application was refused, your deadline is whichever is sooner from the following: 
+          If you got the enforcement notice after your application was refused, your deadline is whichever is sooner from the following:
         </p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>28 days from the date you received the enforcement notice </li>
-          <li>6 months from the decision date on the letter from your local planning department </li>
+          <li>28 days from the date you received the enforcement notice</li>
+          <li>6 months from the decision date on the letter from your local planning department</li>
         </ul>
 
         <!-- Navigation-->
@@ -170,8 +169,8 @@
                     Previous
                   </span>
                 </span>
-                <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                <span class="gem-c-pagination__link-label">Overview</span>
+                  <span class="gem-c-pagination__link-divider visually-hidden">:</span>
+                  <span class="gem-c-pagination__link-label">Overview</span>
               </a>
             </li>
             <li class="gem-c-pagination__item gem-c-pagination__item--next">
@@ -184,13 +183,12 @@
                     Next
                   </span>
                 </span>
-                <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                <span class="gem-c-pagination__link-label">Before you appeal</span>
+                  <span class="gem-c-pagination__link-divider visually-hidden">:</span>
+                  <span class="gem-c-pagination__link-label">Before you appeal</span>
               </a>
             </li>
           </ul>
         </nav>
-
         <div class="app-c-print-link">
           <a href="javascript:preventDefault();" class="app-c-print-link__link govuk-link" rel="alternate">
             Print entire guide
@@ -198,7 +196,6 @@
         </div>
 
       </div>
-
     </div>
 
     <div class="govuk-grid-row">
