--- a/app/views/guidance/full/v3/your-appeal-decision.html
+++ b/app/views/guidance/full/v3/your-appeal-decision.html
@@ -1,7 +1,7 @@
 {% extends "layouts/layout-guidance.html" %}
 
 {% block pageTitle %}
-  Appeal a householder planning decision 
+  Appeal a planning decision
 {% endblock %}
 
 {% block content %}
@@ -24,16 +24,16 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
-        <h1 class="govuk-heading-xl">Appeal a householder planning decision </h1>
+        <h1 class="govuk-heading-xl">Appeal a planning decision</h1>
         <aside role="complementary">
           <nav class="gem-c-contents-list " aria-label="Pages in this guide" role="navigation" data-module="track-click">
             <h2 class="govuk-body gem-c-contents-list__title">Contents</h2>
             <ol class="gem-c-contents-list__list">
-
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="overview"> Overview</a>
               </li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">When you can appeal
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+                <a class="gem-c-contents-list__link govuk-link" href="when-you-can-appeal"> When you can appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="before-you-appeal"> Before you appeal</a>
@@ -47,121 +47,104 @@
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="stages-of-an-appeal">The stages of an appeal</a>
               </li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="your-appeal-decision">Your appeal decision</a>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">Your appeal decision
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="claim-costs-for-your-appeal">Claim costs for your appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="comment-on-householder-appeal">Comment on a householder appeal</a>
+                <a class="gem-c-contents-list__link govuk-link" href="comment-on-planning-appeal">Comment on a planning appeal</a>
               </li>
             </ol>
           </nav>
         </aside>
-        
+
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-l">When you can appeal</h2>
-        
-        <h3 class="govuk-heading-m">Refused planning application </h3>
+        <h2 class="govuk-heading-l" id="part-title">Your appeal decision</h2>
         <p class="govuk-body">
-          If your planning application has been refused for reasons you think are incorrect, you can appeal against the refusal. 
+          A Planning Inspector uses evidence from you, the local planning department and other interested parties to decide your appeal.
         </p>
         <p class="govuk-body">
-          A reason for refusal is incorrect when it goes against the local planning department's development plan and planning policies. 
-        </p>
-        
-        <h3 class="govuk-heading-m">Granted planning permission with conditions </h3>
-        <p class="govuk-body">
-          If your planning application has been granted with conditions you think are incorrect, you can appeal against the conditions. 
-        </p>
-        <p class="govuk-body">
-          A condition is incorrect when it's: 
+          They can decide to:
         </p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>unnecessary</li>
-          <li>irrelevant to planning</li>
-          <li>irrelevant to your development</li>
-          <li>unenforceable</li>
-          <li>vague</li>
-          <li>unreasonable</li>
+          <li>allow your appeal</li>
+          <li>dismiss your appeal</li>
+          <li>make a split decision</li>
         </ul>
+
+        <h2 class="govuk-heading-l pins-guidance-h2">Appeals against refusal or no decision</h2>
+
+        <h3 class="govuk-heading-s">If your appeal is allowed</h3>
         <p class="govuk-body">
-          You can appeal to have the conditions removed from your planning permission, or to change the conditions. 
+          Your planning application is granted. You can go ahead with the planned work.
         </p>
 
-        <h3 class="govuk-heading-m">No decision by the local planning department's deadline </h3>
+        <h3 class="govuk-heading-s">
+          If your appeal is dismissed
+        </h3>
         <p class="govuk-body">
-          If you have not got a decision on your planning application by your local planning department's deadline, you can appeal against the late decision. 
+          Your planning application is refused. 
         </p>
         <p class="govuk-body">
-          The local planning department's deadline is usually 8 weeks from the day it acknowledged your application. But it can be longer if you agreed a different deadline. 
+          You can still talk to your local planning department about resubmitting your application. There may be small changes you can make to improve the chances of your application being granted. 
         </p>
 
-        <h3 class="govuk-heading-m">Who can appeal </h3>
+        <h3 class="govuk-heading-s">
+          If you get a split decision
+        </h3>
         <p class="govuk-body">
-          You can only appeal if you either: 
+          Part of your planning application is granted.
+        </p>
+        <p class="govuk-body">
+          You may choose to go ahead with that part of the planned work.
+        </p>
+        <p class="govuk-body">
+          You can also talk to your local planning department about resubmitting your application. There may be small changes you can make to improve the chances of your whole application being granted.
+        </p>
+
+        <h2 class="govuk-heading-l pins-guidance-h2">
+          Appeals against conditions
+        </h2>
+
+        <h3 class="govuk-heading-s">
+          If your appeal is allowed
+        </h3>
+        <p class="govuk-body">
+          Any conditions you wanted to remove no longer apply to your planning permission. Any conditions you wanted to change are changed.
+        </p>
+
+        <h3 class="govuk-heading-s">
+          If your appeal is dismissed
+        </h3>
+        <p class="govuk-body">
+          The conditions still apply to your planning permission.
+        </p>
+
+        <h3 class="govuk-heading-s">
+          If you get a split decision
+        </h3>
+        <p class="govuk-body">
+          The Planning Inspector agrees with some of the conditions you want to remove or change. This could mean they:
         </p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>made the planning application in your name</li>
-          <li>have permission to act on behalf of the person or organisation whose name is on the application</li>
+          <li>change a condition instead of removing it</li>
+          <li>change a condition in a different way to how you wanted</li>
         </ul>
 
-        <h3 class="govuk-heading-m">Deadline to appeal </h3>
-        
-        <h4 class="govuk-heading-s">Appealing refusal or conditions </h4>
+        <h2 class="govuk-heading-m">
+          If you think your decision is incorrect
+        </h2>
         <p class="govuk-body">
-          Your deadline is 6 months from the decision date on the letter from your local planning department. 
+          If you think the Planning Inspectorate's decision is incorrect, you can challenge the decision in court.
         </p>
-        <div class="govuk-inset-text">
-          <p class="govuk-body">
-            Your deadline is sooner if you're appealing a refused householder planning application. 
-          </p>
-          <p class="govuk-body">
-            You made a householder planning application if you applied for: 
-          </p>
-          <ul class="govuk-list govuk-list--bullet">
-            <li>householder planning permission</li>
-            <li>permission to vary or remove a condition on householder planning permission</li>
-            <li>prior approval: larger home extension</li>
-            <li>prior approval: enlargement of a dwellinghouse by construction of additional storeys </li>
-          </ul>
-          <p class="govuk-body">
-            Find out more in the <a href="#" class="govuk-link">appeal a householder planning decision guidance</a>.
-          </p>
-        </div>
-
-        <h4 class="govuk-heading-s">Appealing if you have not got a decision by the local planning department's deadline </h4>
-        <p class="govuk-body">
-          Your deadline is 6 months from the date your decision was due. 
-        </p>
-
-        <h4 class="govuk-heading-s">If you have an enforcement notice </h4>
-        <p class="govuk-body">
-          Your deadline may be sooner if you have an enforcement notice for the same development as your planning application - or a very similar one. 
-        </p>
-        <p class="govuk-body">
-          If you got the enforcement notice before your application was refused, your deadline is 28 days from the decision date on the letter from your local planning department.  
-        </p>
-        <div class="govuk-inset-text">
-          <p class="govuk-body">
-            If you got the enforcement notice more than 2 years ago, your deadline is not affected.
-          </p>
-        </div>
-        <p class="govuk-body">
-          If you got the enforcement notice after your application was refused, your deadline is whichever is sooner from the following: 
-        </p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>28 days from the date you received the enforcement notice </li>
-          <li>6 months from the decision date on the letter from your local planning department </li>
-        </ul>
 
         <!-- Navigation-->
         <nav class="gem-c-pagination govuk-!-margin-top-9" role="navigation" aria-label="Pagination">
           <ul class="gem-c-pagination__list" data-module="track-click">
             <li class="gem-c-pagination__item gem-c-pagination__item--previous">
-              <a href="overview" class="gem-c-pagination__link" rel="prev">
+              <a href="stages-of-an-appeal" class="gem-c-pagination__link" rel="prev">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
@@ -171,11 +154,11 @@
                   </span>
                 </span>
                 <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                <span class="gem-c-pagination__link-label">Overview</span>
+                <span class="gem-c-pagination__link-label">The stages of an appeal</span>
               </a>
             </li>
             <li class="gem-c-pagination__item gem-c-pagination__item--next">
-              <a href="before-you-appeal" class="gem-c-pagination__link" rel="next">
+              <a href="claim-costs-for-your-appeal" class="gem-c-pagination__link" rel="next">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
@@ -185,9 +168,10 @@
                   </span>
                 </span>
                 <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                <span class="gem-c-pagination__link-label">Before you appeal</span>
+                <span class="gem-c-pagination__link-label">Claim costs for your appeal</span>
               </a>
             </li>
+
           </ul>
         </nav>
 
@@ -198,7 +182,6 @@
         </div>
 
       </div>
-
     </div>
 
     <div class="govuk-grid-row">
