--- a/app/views/guidance/full/v3/your-appeal-statement.html
+++ b/app/views/guidance/full/v3/your-appeal-statement.html
@@ -1,7 +1,7 @@
 {% extends "layouts/layout-guidance.html" %}
 
 {% block pageTitle %}
-  Appeal a householder planning decision 
+  Appeal a planning decision
 {% endblock %}
 
 {% block content %}
@@ -24,22 +24,22 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
-        <h1 class="govuk-heading-xl">Appeal a householder planning decision </h1>
+        <h1 class="govuk-heading-xl">Appeal a planning decision</h1>
         <aside role="complementary">
           <nav class="gem-c-contents-list " aria-label="Pages in this guide" role="navigation" data-module="track-click">
             <h2 class="govuk-body gem-c-contents-list__title">Contents</h2>
             <ol class="gem-c-contents-list__list">
-
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="overview"> Overview</a>
               </li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">When you can appeal
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+                <a class="gem-c-contents-list__link govuk-link" href="when-you-can-appeal"> When you can appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="before-you-appeal"> Before you appeal</a>
               </li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="your-appeal-statement">Your appeal statement</a>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">
+                Your appeal statement
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="submit-an-appeal">Submit an appeal</a>
@@ -54,30 +54,48 @@
                 <a class="gem-c-contents-list__link govuk-link" href="claim-costs-for-your-appeal">Claim costs for your appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="comment-on-householder-appeal">Comment on a householder appeal</a>
+                <a class="gem-c-contents-list__link govuk-link" href="comment-on-planning-appeal">Comment on a planning appeal</a>
               </li>
             </ol>
           </nav>
         </aside>
-        
+
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-l">When you can appeal</h2>
-        
-        <h3 class="govuk-heading-m">Refused planning application </h3>
+        <h2 class="govuk-heading-l" id="part-title">
+          Your appeal statement
+        </h2>
         <p class="govuk-body">
-          If your planning application has been refused for reasons you think are incorrect, you can appeal against the refusal. 
+          Your appeal statement is the main part of your appeal. This is where you explain your reasons for appealing.
         </p>
         <p class="govuk-body">
-          A reason for refusal is incorrect when it goes against the local planning department's development plan and planning policies. 
-        </p>
-        
-        <h3 class="govuk-heading-m">Granted planning permission with conditions </h3>
-        <p class="govuk-body">
-          If your planning application has been granted with conditions you think are incorrect, you can appeal against the conditions. 
+          You can only submit this once, so it's important to get it right.
         </p>
         <p class="govuk-body">
-          A condition is incorrect when it's: 
+          You should prepare your statement in a document to upload with your appeal.
+        </p>
+
+        <h3 class="govuk-heading-m">
+          If you're appealing a refusal
+        </h3>
+        <p class="govuk-body">
+          You must explain why all the reasons for refusal are incorrect, based on planning policy.
+        </p>
+        <p class="govuk-body">
+          You can find the reasons for refusal on your decision letter. Each reason for refusal includes the relevant planning policy and document numbers.
+        </p>
+        <p class="govuk-body">
+          The Planning Officer's report explains how the local planning department has applied the policies.
+        </p>
+        <p class="govuk-body">
+          For your appeal to be successful, the Planning Inspectorate must agree that all the reasons for refusal are incorrect.
+        </p>
+
+        <h3 class="govuk-heading-m">
+          If you're appealing conditions
+        </h3>
+        <p class="govuk-body">
+          You must explain why the conditions are either:
         </p>
         <ul class="govuk-list govuk-list--bullet">
           <li>unnecessary</li>
@@ -88,80 +106,60 @@
           <li>unreasonable</li>
         </ul>
         <p class="govuk-body">
-          You can appeal to have the conditions removed from your planning permission, or to change the conditions. 
+          If you're asking for the conditions to be changed, instead of removed, you should say what you want them to be changed to.
         </p>
 
-        <h3 class="govuk-heading-m">No decision by the local planning department's deadline </h3>
+        <h3 class="govuk-heading-m">
+          If you're appealing a late planning decision
+        </h3>
         <p class="govuk-body">
-          If you have not got a decision on your planning application by your local planning department's deadline, you can appeal against the late decision. 
+          You must explain why your planning application should be granted, based on planning policy.
         </p>
         <p class="govuk-body">
-          The local planning department's deadline is usually 8 weeks from the day it acknowledged your application. But it can be longer if you agreed a different deadline. 
-        </p>
-
-        <h3 class="govuk-heading-m">Who can appeal </h3>
-        <p class="govuk-body">
-          You can only appeal if you either: 
-        </p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>made the planning application in your name</li>
-          <li>have permission to act on behalf of the person or organisation whose name is on the application</li>
-        </ul>
-
-        <h3 class="govuk-heading-m">Deadline to appeal </h3>
-        
-        <h4 class="govuk-heading-s">Appealing refusal or conditions </h4>
-        <p class="govuk-body">
-          Your deadline is 6 months from the decision date on the letter from your local planning department. 
-        </p>
-        <div class="govuk-inset-text">
-          <p class="govuk-body">
-            Your deadline is sooner if you're appealing a refused householder planning application. 
-          </p>
-          <p class="govuk-body">
-            You made a householder planning application if you applied for: 
-          </p>
-          <ul class="govuk-list govuk-list--bullet">
-            <li>householder planning permission</li>
-            <li>permission to vary or remove a condition on householder planning permission</li>
-            <li>prior approval: larger home extension</li>
-            <li>prior approval: enlargement of a dwellinghouse by construction of additional storeys </li>
-          </ul>
-          <p class="govuk-body">
-            Find out more in the <a href="#" class="govuk-link">appeal a householder planning decision guidance</a>.
-          </p>
-        </div>
-
-        <h4 class="govuk-heading-s">Appealing if you have not got a decision by the local planning department's deadline </h4>
-        <p class="govuk-body">
-          Your deadline is 6 months from the date your decision was due. 
+          You should focus on the parts of your application that your local planning department is likely to disagree with, if you know what these are.
         </p>
 
-        <h4 class="govuk-heading-s">If you have an enforcement notice </h4>
+        <h3 class="govuk-heading-m">
+          Respond to comments from interested parties
+        </h3>
         <p class="govuk-body">
-          Your deadline may be sooner if you have an enforcement notice for the same development as your planning application - or a very similar one. 
+          You can include responses to comments from interested parties in your appeal statement. You only need to do this if they relate to reasons for appealing.
+        </p>
+
+        <h3 class="govuk-heading-m">
+          Supporting documents
+        </h3>
+        <p class="govuk-body">
+          You can also include other documents that support your appeal. For example, independent reports, updated plans and drawings, and photographs.
         </p>
         <p class="govuk-body">
-          If you got the enforcement notice before your application was refused, your deadline is 28 days from the decision date on the letter from your local planning department.  
+          If you mention supporting documents in your statement, you must submit them with your appeal. If you do not, it will delay your appeal and you might miss your deadline.
         </p>
-        <div class="govuk-inset-text">
-          <p class="govuk-body">
-            If you got the enforcement notice more than 2 years ago, your deadline is not affected.
-          </p>
-        </div>
+
+        <h3 class="govuk-heading-m">
+          Sensitive information
+        </h3>
         <p class="govuk-body">
-          If you got the enforcement notice after your application was refused, your deadline is whichever is sooner from the following: 
+          Avoid including sensitive information (also called special category information) if it's not relevant to your appeal. Any sensitive information you share may be shared publicly if the Planning Inspectorate agrees that it's relevant to your appeal.
         </p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>28 days from the date you received the enforcement notice </li>
-          <li>6 months from the decision date on the letter from your local planning department </li>
-        </ul>
+
+        <p class="govuk-body">
+          Sensitive information includes health, race and gender.
+        </p>
+
+        <h3 class="govuk-heading-l pins-guidance-h3">
+          Inflammatory and abusive language
+        </h3>
+        <p class="govuk-body">
+          You must not include inflammatory or abusive language.
+        </p>
 
         <!-- Navigation-->
         <nav class="gem-c-pagination govuk-!-margin-top-9" role="navigation" aria-label="Pagination">
           <ul class="gem-c-pagination__list" data-module="track-click">
+
             <li class="gem-c-pagination__item gem-c-pagination__item--previous">
-              <a href="overview" class="gem-c-pagination__link" rel="prev">
+              <a href="before-you-appeal" class="gem-c-pagination__link" rel="prev">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
@@ -170,12 +168,12 @@
                     Previous
                   </span>
                 </span>
-                <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                <span class="gem-c-pagination__link-label">Overview</span>
+                  <span class="gem-c-pagination__link-divider visually-hidden">:</span>
+                  <span class="gem-c-pagination__link-label">Before you appeal</span>
               </a>
             </li>
             <li class="gem-c-pagination__item gem-c-pagination__item--next">
-              <a href="before-you-appeal" class="gem-c-pagination__link" rel="next">
+              <a href="submit-an-appeal" class="gem-c-pagination__link" rel="next">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
@@ -184,10 +182,11 @@
                     Next
                   </span>
                 </span>
-                <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                <span class="gem-c-pagination__link-label">Before you appeal</span>
+                  <span class="gem-c-pagination__link-divider visually-hidden">:</span>
+                  <span class="gem-c-pagination__link-label">Submit an appeal</span>
               </a>
             </li>
+
           </ul>
         </nav>
 
@@ -198,7 +197,6 @@
         </div>
 
       </div>
-
     </div>
 
     <div class="govuk-grid-row">
