content fixes to householder when you can appeal

--- a/app/views/guidance/householder/v1/when-you-can-appeal.html
+++ b/app/views/guidance/householder/v1/when-you-can-appeal.html
@@ -63,86 +63,41 @@
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
         <h2 class="govuk-heading-l">When you can appeal</h2>
-        
-        <h3 class="govuk-heading-m">Refused planning application </h3>
         <p class="govuk-body">
-          If your planning application has been refused for reasons you think are incorrect, you can appeal against the refusal. 
+          If your householder planning application has been refused for reasons that you think are incorrect, you can appeal against the refusal. 
         </p>
         <p class="govuk-body">
-          A reason for refusal is incorrect when it goes against the local planning department's development plan and planning policies. 
+          A reason for refusal is 'incorrect' if it goes against the local planning department's development plan and planning policies. 
         </p>
         
-        <h3 class="govuk-heading-m">Granted planning permission with conditions </h3>
-        <p class="govuk-body">
-          If your planning application has been granted with conditions you think are incorrect, you can appeal against the conditions. 
-        </p>
-        <p class="govuk-body">
-          A condition is incorrect when it's: 
-        </p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>unnecessary</li>
-          <li>irrelevant to planning</li>
-          <li>irrelevant to your development</li>
-          <li>unenforceable</li>
-          <li>vague</li>
-          <li>unreasonable</li>
-        </ul>
-        <p class="govuk-body">
-          You can appeal to have the conditions removed from your planning permission, or to change the conditions. 
-        </p>
-
-        <h3 class="govuk-heading-m">No decision by the local planning department's deadline </h3>
-        <p class="govuk-body">
-          If you have not got a decision on your planning application by your local planning department's deadline, you can appeal against the late decision. 
-        </p>
-        <p class="govuk-body">
-          The local planning department's deadline is usually 8 weeks from the day it acknowledged your application. But it can be longer if you agreed a different deadline. 
-        </p>
-
         <h3 class="govuk-heading-m">Who can appeal </h3>
         <p class="govuk-body">
           You can only appeal if you either: 
         </p>
         <ul class="govuk-list govuk-list--bullet">
           <li>made the planning application in your name</li>
-          <li>have permission to act on behalf of the person or organisation whose name is on the application</li>
+          <li>have permission to act on behalf of the person or organisation whose name is on the application </li>
         </ul>
-
-        <h3 class="govuk-heading-m">Deadline to appeal </h3>
         
-        <h4 class="govuk-heading-s">Appealing refusal or conditions </h4>
+        <h3 class="govuk-heading-m">Deadline to appeal </h3>
         <p class="govuk-body">
-          Your deadline is 6 months from the decision date on the letter from your local planning department. 
+          Your deadline is 12 weeks from the decision date on the letter from your local planning department. 
         </p>
         <div class="govuk-inset-text">
           <p class="govuk-body">
-            Your deadline is sooner if you're appealing a refused householder planning application. 
+            This deadline only applies if you're appealing a refused householder planning decision. If you're appealing a different decision, your deadline is longer.
           </p>
           <p class="govuk-body">
-            You made a householder planning application if you applied for: 
-          </p>
-          <ul class="govuk-list govuk-list--bullet">
-            <li>householder planning permission</li>
-            <li>permission to vary or remove a condition on householder planning permission</li>
-            <li>prior approval: larger home extension</li>
-            <li>prior approval: enlargement of a dwellinghouse by construction of additional storeys </li>
-          </ul>
-          <p class="govuk-body">
-            Find out more in the <a href="#" class="govuk-link">appeal a householder planning decision guidance</a>.
+            Find out more in the <a href="#" class="govuk-link">appeal a planning decision guidance</a>.
           </p>
         </div>
-
-        <h4 class="govuk-heading-s">Appealing if you have not got a decision by the local planning department's deadline </h4>
-        <p class="govuk-body">
-          Your deadline is 6 months from the date your decision was due. 
-        </p>
-
-        <h4 class="govuk-heading-s">If you have an enforcement notice </h4>
+        
+        <h4 class="govuk-heading-s">If you have an enforcement notice</h4>
         <p class="govuk-body">
           Your deadline may be sooner if you have an enforcement notice for the same development as your planning application - or a very similar one. 
         </p>
         <p class="govuk-body">
-          If you got the enforcement notice before your application was refused, your deadline is 28 days from the decision date on the letter from your local planning department.  
+          If you got the enforcement notice before your application was refused, your deadline is 28 days from the decision date on the letter from your local planning department. 
         </p>
         <div class="govuk-inset-text">
           <p class="govuk-body">
