minor typo on index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -301,7 +301,7 @@ service-start{% extends "layout.html" %}
                         <a href="/appellant-submission/v14/before-you-start/">Start from 'Before you start'</a>
                       </li>
                       <li>
-                        Start from check your answers in 'Before you start':</a>
+                        Starting from check your answers in 'Before you start':</a>
                         <ul class="govuk-list govuk-list--bullet">
                           <li>
                             <a href="/appellant-submission/v14/skip/bys-cya-removalvary-nondetermination">Appeal non-determination of removal or variation of conditions</a>
