minor content and page ref fixes

--- a/app/views/appellant-submission/v14/full/planning-application-documents/certificates.html
+++ b/app/views/appellant-submission/v14/full/planning-application-documents/certificates.html
@@ -44,9 +44,9 @@ Does the application form include site ownership and agricultural holdings certi
           },
           items: [
             {
-              value: "Yes, my application form includes site ownership and agricultural holdings declarations",
-              text: "Yes, my application form includes site ownership and agricultural holdings declarations",
-              checked: checked("appealsub-"+version+"-applicationdocs-certificates", "Yes, my application form includes site ownership and agricultural holdings declarations")
+              value: "Yes, my application form includes site ownership and agricultural holdings certificates",
+              text: "Yes, my application form includes site ownership and agricultural holdings certificates",
+              checked: checked("appealsub-"+version+"-applicationdocs-certificates", "Yes, my application form includes site ownership and agricultural holdings certificates")
             },
             {
               value: "No, I submitted these separately",
