Addition of summary details to task lists

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -675,12 +675,14 @@ service-start{% extends "layout.html" %}
                       </li>
                       <li>
                         <a href="/save-progress/v3/before-you-continue">
-                          You’ll need to submit some documents
+                          You'll need to submit some documents
                         </a>
                       </li>
                       <li>
                         <a href="/save-progress/v3/task-list">
-                          Task list
+                          Full appeal task list
+                        </a> / <a href="/save-progress/v3/task-list-householder">
+                          Householder task list
                         </a>
                       </li>
                       <li>
