Full appeal v14 ready for UR

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -279,8 +279,8 @@ service-start{% extends "layout.html" %}
 
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
-                      classes: "govuk-tag--red govuk-!-margin-bottom-3",
-                      text: "WIP"
+                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
+                      text: "Ready for UR"
                     }) }}
                     <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                       Version 14 - Missing questions in full appeal submission
